data/derived/comb/progs/unify/prog5122.ml.out
Characters 47-53:
  | b -> f b wwhile(f b,b);;
             ^^^^^^
Error: This expression has type ('a -> 'b -> 'c -> 'd) * 'a -> 'e
       but an expression was expected of type 'b
       The type variable 'b occurs inside ('a -> 'b -> 'c -> 'd) * 'a -> 'e
